fixed for CHLK-3968 Teacher > Apps > App Store. Name of the App is cut off on the "App Store" page when the name is too long

--- a/Chalkable.Web/assets/sass2/2_atoms/_attachments-and-applications.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_attachments-and-applications.sass
@@ -85,6 +85,7 @@
       width: 188px - 2 * 19px
       white-space: nowrap
       text-overflow: ellipsis
+      overflow: hidden
 
     &:hover .title
       bottom: 155px - 36px - $padding
